--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Evacuator non-stop în Chișinău și suburbii.</title>
-    <link rel="icon" href="https://placehold.co/32x32/1a202c/ffffff?text=E" type="image/png">
+    <link rel="icon" href="Resources/Photo/Icons/WebIcon.png" type="image/png">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
@@ -338,7 +338,7 @@
     <header class="bg-white shadow-sm py-4 sticky top-0 z-40">
         <div class="container mx-auto px-4 flex justify-between items-center">
             <a href="#" data-section="home" class="nav-link">
-                <h1 class="text-2xl md:text-3xl font-extrabold text-blue-800 tracking-tight">Evacuator247</h1>
+                <h1 class="text-2xl md:text-3xl font-extrabold text-blue-800 tracking-tight">Evacuator2424</h1>
             </a>
             
             <!-- Desktop Navigation -->
@@ -454,7 +454,7 @@
                            <div class="service-card">
                                 <i class="fas fa-shipping-fast icon"></i>
                                 <h4>Răspuns Imediat 24/7</h4>
-                                <p>Suntem mereu la datorie, indiferent de oră. Având baza în Chișinău, garantăm o intervenție ultra-rapidă. În cazul în care vă aflați în raza orașului sau în suburbiile apropiate, o autospecială poate ajunge la dumneavoastră chiar și în 30 de minute de la apel. Găsim mereu un șofer disponibil pentru a vă oferi ajutorul de care aveți nevoie, prompt și eficient.</p>
+                                <p>Suntem mereu la datorie, indiferent de oră. Având baza în Chișinău, garantăm o intervenție ultra-rapidă. În cazul în care vă aflați în raza orașului sau în suburbii, autospeciala  ajunge la dumneavoastră chiar și în 30 de minute de la apel. Găsim mereu un șofer disponibil pentru a vă oferi ajutor eficient.</p>
                             </div>
                         </div>
                          <!-- Service Card 5 (New) -->
@@ -520,10 +520,10 @@
         <section id="recenzii" class="content-section">
             <div class="container mx-auto px-4 lg:px-10 py-6 lg:py-8">
                 <h2 class="text-3xl md:text-4xl font-extrabold text-gray-900 text-center mb-4"></h2>
-                <p class="text-center text-gray-600 mb-8 max-w-3xl mx-auto">Ne mândrim cu încrederea pe care clienții ne-o acordă. Fiecare recenzie este o dovadă a profesionalismului și dedicării echipei noastre. Vă invităm să parcurgeți mărturiile celor care au apelat la serviciile Evacuator247 și s-au convins de calitatea intervențiilor noastre.</p>
+                <p class="text-center text-gray-600 mb-8 max-w-3xl mx-auto">Ne mândrim cu încrederea pe care clienții ne-o acordă. Fiecare recenzie este o dovadă a profesionalismului și dedicării echipei noastre. Vă invităm să parcurgeți mărturiile celor care au apelat la serviciile Evacuator2424 și s-au convins de calitatea intervențiilor noastre.</p>
                 <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 md:gap-6">
-                    <img src="https://placehold.co/400x600/e2e8f0/4a5568?text=Recenzie%20Client%201" alt="Recenzie 1" class="gallery-image w-full aspect-[2/3] object-cover rounded-lg shadow-md" />
-                    <img src="https://placehold.co/400x600/e2e8f0/4a5568?text=Recenzie%20Client%202" alt="Recenzie 2" class="gallery-image w-full aspect-[2/3] object-cover rounded-lg shadow-md" />
+                    <img src="Resources/Photo/Reviews/Review_1.jpg" alt="Recenzie 1" class="gallery-image w-full aspect-[2/3] object-cover rounded-lg shadow-md" />
+                    <img src="Resources/Photo/Reviews/Review_2.jpg" alt="Recenzie 2" class="gallery-image w-full aspect-[2/3] object-cover rounded-lg shadow-md" />
                     <img src="https://placehold.co/400x600/e2e8f0/4a5568?text=Recenzie%20Client%203" alt="Recenzie 3" class="gallery-image w-full aspect-[2/3] object-cover rounded-lg shadow-md" />
                     <img src="https://placehold.co/400x600/e2e8f0/4a5568?text=Recenzie%20Client%204" alt="Recenzie 4" class="gallery-image w-full aspect-[2/3] object-cover rounded-lg shadow-md" />
                     <img src="https://placehold.co/400x600/e2e8f0/4a5568?text=Recenzie%20Client%205" alt="Recenzie 5" class="gallery-image w-full aspect-[2/3] object-cover rounded-lg shadow-md" />
@@ -589,7 +589,7 @@
                             <label for="is-automatic" class="flex items-center p-4 border-2 border-gray-200 rounded-lg cursor-pointer has-[:checked]:border-blue-800 has-[:checked]:ring-2 has-[:checked]:ring-blue-800 transition-all hover:border-gray-400"><input type="checkbox" id="is-automatic" name="is-automatic" class="h-5 w-5 rounded border-gray-300 text-blue-800 focus:ring-blue-700"><div class="ml-4"><span class="text-sm font-medium text-gray-900">Vehicul blocat</span></div></label>
                         </div>
                         <button type="submit" id="calculateBtn" class="w-full flex justify-center py-4 px-4 border border-transparent rounded-lg shadow-sm text-base font-medium text-white bg-blue-800 hover:bg-blue-900 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-800 transition-all duration-200 button-hover-effect disabled:opacity-50 disabled:cursor-not-allowed" disabled>Calculează Tariful</button>
-                        <p class="text-xs text-gray-500 mt-4 max-w-lg mx-auto">Datele sunt calculate folosind cel mai scurt traseu între cele 2 puncte indicate, prețul final depinde de distanța exactă dintre punctul de pornire și cel de oprire și poate fi ușor diferit (+-10%). Va fi confirmat telefonic.</p>
+                        <p class="text-xs text-gray-500 mt-4 max-w-lg mx-auto">*Calculat folosind cel mai scurt traseu între cele 2 destinații, prețul final depinde de distanța exactă dintre punctul de pornire și cel de oprire și poate fi ușor diferit (+-10%). Va fi confirmat telefonic.</p>
                     </form>
                     <div id="loaderContainer" class="hidden w-full my-8">
                         <div id="counter">0%</div>
@@ -623,8 +623,8 @@
     <footer class="footer">
         <div class="footer-content">
             <div class="footer-section">
-                <h4>Despre Evacuator247</h4>
-                <p>Suntem partenerul tău de încredere, gata să intervină non-stop, indiferent de situație. Fie că ai nevoie de asistență locală în Chișinău sau transport internațional, echipa noastră de profesioniști îți garantează o soluție rapidă și sigură.</p>
+                <h4>Despre Evacuator2424</h4>
+                <p>Suntem partenerul tău de încredere, gata să intervină non-stop, indiferent de situație. Fie că ai nevoie de asistență locală sau transport internațional, echipa noastră de profesioniști îți garantează o soluție rapidă și sigură.</p>
             </div>
             <div class="footer-section">
                 <h4></h4>
@@ -640,7 +640,7 @@
             <div class="footer-section">
                 <h4>Contact</h4>
                 <p><i class="fas fa-phone mr-2"></i> 068223614</p>
-                <p><i class="fas fa-envelope mr-2"></i> contact@evacuator247.com</p>
+                <p><i class="fas fa-envelope mr-2"></i> contact@evacuator2424.com</p>
                 <div class="social-icons-row">
                     <a href="https://www.tiktok.com/@YOUR_USERNAME" target="_blank" rel="noopener noreferrer" class="social-icon-link"><i class="fab fa-tiktok"></i></a>
                     <a href="https://www.instagram.com/@YOUR_USERNAME" target="_blank" rel="noopener noreferrer" class="social-icon-link"><i class="fab fa-instagram"></i></a>
@@ -649,7 +649,7 @@
             </div>
         </div>
         <div class="footer-copyright">
-            <p>&copy; 2025 Evacuator247. Toate drepturile rezervate. Creat de [Numele Companiei Tale].</p>
+            <p>&copy; 2025 Evacuator2424. Toate drepturile rezervate. Creat de [Numele Companiei Tale].</p>
         </div>
     </footer>
     
