--- a/index.html
+++ b/index.html
@@ -738,8 +738,8 @@
                 <p><i class="fas fa-envelope mr-2"></i> contact@evacuator2424.com</p>
                 <div class="social-icons-row">
                     <a href="https://www.tiktok.com/@YOUR_USERNAME" target="_blank" rel="noopener noreferrer" class="social-icon-link"><i class="fab fa-tiktok"></i></a>
-                    <a href="https://www.instagram.com/@YOUR_USERNAME" target="_blank" rel="noopener noreferrer" class="social-icon-link"><i class="fab fa-instagram"></i></a>
-                    <a href="https://www.facebook.com/YOUR_PAGE_OR_PROFILE" target="_blank" rel="noopener noreferrer" class="social-icon-link"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://www.instagram.com/danu.mihalachi/" target="_blank" rel="noopener noreferrer" class="social-icon-link"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.facebook.com/mihalachi.danu.9" target="_blank" rel="noopener noreferrer" class="social-icon-link"><i class="fab fa-facebook-f"></i></a>
                 </div>
             </div>
         </div>
