--- a/index.html
+++ b/index.html
@@ -341,6 +341,16 @@
             font-size: 0.875rem;
             color: #9ca3af;
         }
+        .studio-link {
+            color: #ffffff;
+            font-weight: 700;
+            text-decoration: none;
+            transition: all 0.3s ease;
+        }
+        .studio-link:hover {
+            color: #60a5fa;
+            transform: scale(1.05);
+        }
 
         #mobile-menu {
             transition: transform 0.3s ease-in-out;
@@ -763,7 +773,7 @@
             </div>
         </div>
         <div class="footer-copyright">
-            <p>&copy; 2025 Evacuator2424. Toate drepturile rezervate. Creat de [Numele Companiei Tale].</p>
+            <p>&copy; 2025 Evacuator2424. Toate drepturile rezervate. Creat de <a href="https://levario.netlify.app" target="_blank" rel="noopener noreferrer" class="studio-link">Levario Independent Studio</a>.</p>
         </div>
     </footer>
     
@@ -1304,7 +1314,11 @@
                 dismissDropZone.classList.remove('hover');
             });
         });
+        
     </script>
+    <!-- 100% privacy-first analytics -->
+<script data-collect-dnt="true" async src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
+<noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif?collect-dnt=true" alt="" referrerpolicy="no-referrer-when-downgrade"/></noscript>
 
 </body>
 </html>
