--- a/index.html
+++ b/index.html
@@ -1155,7 +1155,7 @@
                     </div>
                     <div id="loaderContainer" class="hidden w-full my-8">
                         <div id="counter">0%</div>
-                        <img id="loaderTruckImage" src="icon.png" alt="Se calculează..." />
+                        <img id="loaderTruckImage" src="Resources/Photo/Icons/icon.png" alt="Se calculează..." />
                     </div>
                     <div id="resultContainer" class="hidden my-8">
                         <p id="resultText" class="text-2xl md:text-3xl font-bold text-gray-800"></p>
